# payments-core

./: .dockerignore  .gitignore  Makefile  README.md  compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/: dev.Dockerfile
docs/: ADR-001.md  ADR-002.md  ADR-003.md  ADR-004.md  ADR-005.md  ADR-00X.md
src/payments_core/: __init__.py
src/payments_core/application/: __init__.py  dtos.py
src/payments_core/application/ports/: __init__.py  capture_repository.py  lock_provider.py  payment_repository.py  time_provider.py
src/payments_core/application/use_cases/: __init__.py  capture_payment.py
src/payments_core/domain/: __init__.py  exceptions.py
src/payments_core/domain/entities/: __init__.py  capture.py  payment.py
src/payments_core/domain/services/: __init__.py
src/payments_core/domain/value_objects/: __init__.py  capture_id.py  idempotency_key.py  payment_id.py
src/payments_core/entrypoints/: __init__.py
src/payments_core/entrypoints/api/: __init__.py
src/payments_core/infrastructure/: __init__.py  capture_repository.py  lock_provider.py  locking.py  payment_repository.py  time_provider.py
src/payments_core/infrastructure/persistence/: __init__.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py
tests/unit/application/use_cases/: test_capture_payment.py
tests/unit/domain/entities/: test_capture.py  test_payment.py
tests/unit/domain/value_objects/: test_capture_id.py  test_idempotency_key.py  test_payment_id.py
tests/unit/infrastructure/: test_capture_repository.py  test_lock_provider.py  test_payment_repository.py  test_time_provider.py
